os/Xtrans.v.err
/home/haplessidiot/Documents/xserver/os/Xtrans.c:91:1: error: unknown type name 'Xtransport_table'
   91 | Xtransport_table Xtransports[] = {
      | ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:128:31: error: unknown type name 'XtransConnInfo'
  128 | void _XSERVTransFreeConnInfo (XtransConnInfo ciptr)
      |                               ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:131:5: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  131 |     prmsg (3,"FreeConnInfo(%p)\n", (void *) ciptr);
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:148:8: error: unknown type name 'Xtransport'
  148 | static Xtransport *
      |        ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:156:5: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  156 |     prmsg (3,"SelectTransport(%s)\n", protocol);
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:174:34: error: use of undeclared identifier 'Xtransport_table'
  174 |     for (unsigned int i = 0; i < NUMTRANS; i++)
      |                                  ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:116:46: note: expanded from macro 'NUMTRANS'
  116 | #define NUMTRANS        (sizeof(Xtransports)/sizeof(Xtransport_table))
      |                                                     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:213:5: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  213 |     prmsg (3,"ParseAddress(%s)\n", address);
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:315:2: error: call to undeclared function '_XSERVTransGetHostname'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  315 |         _XSERVTransGetHostname (hostnamebuf, sizeof (hostnamebuf));
      |         ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:395:8: error: unknown type name 'XtransConnInfo'
  395 | static XtransConnInfo
      |        ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:400:5: error: use of undeclared identifier 'XtransConnInfo'
  400 |     XtransConnInfo      ciptr = NULL;
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:401:5: error: use of undeclared identifier 'Xtransport'; did you mean 'Xtransports'?
  401 |     Xtransport          *thistrans;
      |     ^~~~~~~~~~
      |     Xtransports
/home/haplessidiot/Documents/xserver/os/Xtrans.c:91:18: note: 'Xtransports' declared here
   91 | Xtransport_table Xtransports[] = {
      |                  ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:401:18: error: use of undeclared identifier 'thistrans'
  401 |     Xtransport          *thistrans;
      |                          ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:403:5: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  403 |     prmsg (2,"Open(%d,%s)\n", type, address);
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:418:9: error: incompatible pointer to integer conversion returning 'void *' from a function with result type 'int' [-Wint-conversion]
  418 |         return NULL;
      |                ^~~~
/usr/lib/clang/20/include/__stddef_null.h:26:14: note: expanded from macro 'NULL'
   26 | #define NULL ((void*)0)
      |              ^~~~~~~~~~
/home/haplessidiot/Documents/xserver/os/Xtrans.c:423:10: error: use of undeclared identifier 'thistrans'
  423 |     if ((thistrans = _XSERVTransSelectTransport (protocol)) == NULL)
      |          ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:431:9: error: incompatible pointer to integer conversion returning 'void *' from a function with result type 'int' [-Wint-conversion]
  431 |         return NULL;
      |                ^~~~
/usr/lib/clang/20/include/__stddef_null.h:26:14: note: expanded from macro 'NULL'
   26 | #define NULL ((void*)0)
      |              ^~~~~~~~~~
/home/haplessidiot/Documents/xserver/os/Xtrans.c:438:10: error: use of undeclared identifier 'XTRANS_OPEN_COTS_CLIENT'
  438 |     case XTRANS_OPEN_COTS_CLIENT:
      |          ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:440:10: error: use of undeclared identifier 'XTRANS_OPEN_COTS_SERVER'
  440 |     case XTRANS_OPEN_COTS_SERVER:
      |          ^
/home/haplessidiot/Documents/xserver/os/Xtrans.c:441:2: error: use of undeclared identifier 'ciptr'
  441 |         ciptr = thistrans->OpenCOTSServer(thistrans, protocol, host, port);
      |         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.

The file /home/haplessidiot/Documents/xserver/os/Xtrans.c could not be parsed as a C source file.
C2V command: '/home/haplessidiot/.vmodules/c2v/c2v' 'c' '/home/haplessidiot/Documents/xserver/os/Xtrans.c'
C2V failed to translate the C files. Please report it via GitHub.
